process - api es08

--- a/virtualization/es02-process-api/Makefile
+++ b/virtualization/es02-process-api/Makefile
@@ -1,6 +1,18 @@
 SHELL=/bin/bash
 
-all: es04 es02 es01 example
+all: es08 es07 es06 es05 es04 es02 es01 example
+
+es08: es08.c
+	gcc -o es08 es08.c
+
+es07: es07.c
+	gcc -o es07 es07.c
+
+es06: es06.c
+	gcc -o es06 es06.c
+
+es05: es05.c
+	gcc -o es05 es05.c
 
 es04: es04.c
 	gcc -o es04 es04.c
@@ -18,4 +30,5 @@ example: example.c
 	gcc -o example example.c
 
 clean:
-	rm es04 es02 test02.txt es01 example
+	rm es08 es07 es06 es05 es04 es02 test02.txt es01 example
+
