--- a/virtualization/es03-limited-direct-execution/Makefile
+++ b/virtualization/es03-limited-direct-execution/Makefile
@@ -1,8 +1,8 @@
-all: 01-costs-syscall.exe
+all: es01-costs-syscall.exe
 
-01-costs-syscall.exe: 01-costs-syscall.c
-	gcc -o 01-costs-syscall.exe 01-costs-syscall.c
+es01-costs-syscall.exe: es01-costs-syscall.c
+	gcc -o es01-costs-syscall.exe es01-costs-syscall.c
 
 clean:
-	rm 01-costs-syscall.exe
+	rm es01-costs-syscall.exe
 
