es13 tlb finish (?)

--- a/virtualization/es13-paging-tlb/Makefile
+++ b/virtualization/es13-paging-tlb/Makefile
@@ -1,12 +1,12 @@
 CFLAGS=-g -Wall
 
-all: tlb
+all: tlb.exe
 
-tlb: tlb.c
-	gcc ${CFLAGS} -o tlb tlb.c
+tlb.exe: tlb.c
+	gcc ${CFLAGS} -o tlb.exe tlb.c
 
 .PHONY: clean
 
-clean: tlb
-	rm tlb
+clean: tlb.exe
+	rm tlb.exe
 
