--- a/concurrency/class-exercises/week03/Makefile
+++ b/concurrency/class-exercises/week03/Makefile
@@ -2,7 +2,8 @@ CFLAGS=-Wall -Werror -g -D_THREAD_SAFE -D_REENTRANT -D_POSIX_C_SOURCE=200112L -I
 LFLAGS=-lpthread
 
 SRCS	:= ./es01-cond-signal.c \
-	./es02-sync-circular-three-th.c
+	./es02-sync-circular-three-th.c \
+	./es03-baker.c
 
 OBJS	:= ${SRCS:c=o}
 PROGS	:= ${SRCS:c=exe}
