80 lines makefile week03

--- a/concurrency/class-exercises/week03/Makefile
+++ b/concurrency/class-exercises/week03/Makefile
@@ -1,4 +1,5 @@
-CFLAGS=-Wall -Werror -g -D_THREAD_SAFE -D_REENTRANT -D_POSIX_C_SOURCE=200112L -I../include
+CFLAGS=-Wall -Werror -g -D_THREAD_SAFE -D_REENTRANT -D_POSIX_C_SOURCE=200112L \
+	   -D_GNU_SOURCE -I../include
 LFLAGS=-lpthread
 
 SRCS	:= ./es01-cond-signal.c \
@@ -20,5 +21,5 @@ clean:
 	rm -f ${PROGS} ${OBJS}
 
 %.o: %.c Makefile
-	gcc ${CFLAGS} -D_GNU_SOURCE -c $<
+	gcc ${CFLAGS} -c $<
 
