week04 class es03 producer consumer parallel single buffer

--- a/concurrency/class-exercises/week04/Makefile
+++ b/concurrency/class-exercises/week04/Makefile
@@ -2,7 +2,8 @@ CFLAGS=-Wall -Werror -g -D_THREAD_SAFE -D_REENTRANT -D_POSIX_C_SOURCE=200112L \
 	   -D_GNU_SOURCE -I../include
 LFLAGS=-lpthread
 
-SRCS	:= ./es02-producer-consumer-serial.c
+SRCS	:= ./es02-producer-consumer-serial.c \
+	./es03-producer-consumer-parallel.c
 
 OBJS	:= ${SRCS:c=o}
 PROGS	:= ${SRCS:c=exe}
