--- a/concurrency/class-exercises/week05/Makefile
+++ b/concurrency/class-exercises/week05/Makefile
@@ -1,4 +1,4 @@
-CFLAGS=-Wall -Werror -g -D_THREAD_SAFE -D_REENTRANT -D_POSIX_C_SOURCE=200112L \
+CFLAGS=-g -D_THREAD_SAFE -D_REENTRANT -D_POSIX_C_SOURCE=200112L \
 	   -D_GNU_SOURCE -I../include
 LFLAGS=-lpthread
 
