--- a/concurrency/class-exercises/week05/Makefile
+++ b/concurrency/class-exercises/week05/Makefile
@@ -1,8 +1,9 @@
 CFLAGS=-g -D_THREAD_SAFE -D_REENTRANT -D_POSIX_C_SOURCE=200112L \
 	   -D_GNU_SOURCE -I../include
-LFLAGS=-lpthread
+LFLAGS=-lpthread -lrt
 
-SRCS	:= ./es01-flinstones.c
+SRCS	:= ./es01-flinstones.c \
+	./es02-flinstones-multi-process.c
 
 OBJS	:= ${SRCS:c=o}
 PROGS	:= ${SRCS:c=exe}
